--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,167 @@
+
 .App {
-  text-align: center;
+  
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  width: 120px;
+  height: 28px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  padding: 10px;
   color: white;
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  background-color: rgb(68, 68, 68);
+}
+.App-header-box{
+  max-width: 1400px;
+  min-width:900px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  
+}
+.header-left{
+  display: flex;
+  align-items: center;
+}
+.header-left .search{
+  width: 200px;
+  font-size: 14px;
+  height: 20px;
+  border-radius: 20px;
+  margin-left: 20px;
+  padding: 4px 0 4px 24px;
+  background: url(http://cnodejs.org/public/images/search.e53b380a.hashed.png) #fff 5px center no-repeat;
+}
+.header-right{
+  display: flex;
+  
+}
+.header-right li{
+}
+.header-right li>a{
+  height: 100%;
+  display: block;
+  /* padding:10px 15px; */
+  color: #ccc;
+  line-height: 28px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.home-box-tab{
+  display: flex;
+}
+.home-box-tab li{
+  margin: 0 10px;
+}
+.home-box-tab li a{
+  color: #80bd01;
+  padding: 3px 4px;
 }
 
-.App-intro {
-  font-size: large;
+.home-box-tab li.cur{
+  border-radius: 3px;
+  background-color: #80bd01;
 }
+.home-box-tab li.cur a{
+  
+  color: #fff;
+}
+.home-list{
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+}
+.home-list-li{
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+}
+.home-list-left{
+  display: flex;
+  align-items: center;
+}
+.home-list-left p{
+  width: 70px;
+  text-align: center;
+  font-size: 10px;
+  color: #b4b4b4;    
+}
+.home-list-left p>span{
+  color: #9e78c0;
+}
+.home-list-left img{
+  width: 30px;
+  height: 30px;
+}
+.home-list-right{
+  display: flex;
+  align-items: center;
+}
+.home-list-right img{
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+}
+.home-list-right span{
+  width: 60px;text-align: right;
+}
+.home-list-cen{
+  display: flex;
+  align-items: center;
+}
+.home-list-cen span{
+  padding: 2px 4px;
+  background-color: #E5E5E6;
+  border-radius: 3px;
+  font-size: 12px;
+  color: #999999;
+}
+.home-list-cen span.cur{
+  background-color: #80bd01;
+  color: #ffffff;
+}
+.home-list-cen a{
+ 
+  margin-left: 10px;
+  display: flex;
+  line-height: 30px;
+  color: #333;
+  font-size: 16px;
+}
+.home-list-cen a:hover{
+  text-decoration: underline;
+}
+.login-box{
+  width: 100%;
+  background-color:#fff;
+  padding:40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login-but{
+  margin-top: 20px;
+  width: 100px;
+  height: 40px;
+  background-color:#5bc0de;
+  line-height:40px;
+  text-align: center;
+  border-radius: 4px;
+  color: #fff;
+}
+.login-key{
+  width: 300px;
+  height: 30px;
+  padding:4px 10px;
+  border-radius:4px;
+  border: 1px solid #ccc;
+}
+.no-topic{
+  padding: 10px;
+  background-color: #fff;
 }
