--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,59 @@
-body {
+html{
+  width: 100%;
+  display: block;
+}
+body{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background-color: #e1e1e1;
+  height: 100%;
+  width: 100%;
+  font-size: 14px;
+  font-family:"Helvetica Neue","Luxi Sans","DejaVu Sans",Tahoma,"Hiragino Sans GB",STHeiti,sans-serif!important;
+}
+ul{
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
+a{
+  text-decoration: none;
+  color:#333;
+}
+img {
+  width: auto\9;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+}
+input{
+  border: none;
+}
+p{
+  margin: 0;
+}
+.main-title{
+  background-color: #f6f6f6;
+  padding: 10px;
+  border-radius: 3px 3px 0 0;
+}
+.main-left{
+  margin-right:15px;
+  flex: 1;
+}
+.introduce-box{
+  padding: 10px;
+  background-color: #fff;
+}
+.login-buttom{
+  display: block;
+  margin-top: 20px;
+  width: 100px;
+  height: 40px;
+  background-color:#5bc0de;
+  line-height:40px;
+  text-align: center;
+  border-radius: 4px;
+  color: #fff;
 }
