优化加载动画样式，优化文章列表样式;准备上拉加载组件的开发

--- a/wap/src/components/CHeader/CHeader.css
+++ b/wap/src/components/CHeader/CHeader.css
@@ -7,6 +7,8 @@
     z-index: 99;
     background: #fff;
     border-bottom: 1px solid gray;
+    position: fixed;
+    top:0;
   } 
   .headerNav{
     text-decoration: none!important;
@@ -18,6 +20,5 @@
     text-align: center;
   }
   .active{
-    /* background: rgb(4,195,224); */
     border-bottom: solid 0.3rem rgb(4,195,224);
   }
