--- a/wap/src/common/common.css
+++ b/wap/src/common/common.css
@@ -1,4 +1,27 @@
 /*加载动画样式*/
-.loading{
-    
+:global(.loading){
+    position: fixed;
+    top:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%!important;
+    text-align: center;
+}
+:global(.App){
+    width: 100%;
+    height: 100%!important;
+}
+:global(#root){
+    width: 100%;
+    height: 100%!important;
+}
+:global(#root){
+    width: 100%;
+    height: 100%!important;
+}
+/*列表样式*/
+:global(.all){
+    padding: 5rem 0 3.8rem 0;
 }
