--- a/wap/src/common/common.css
+++ b/wap/src/common/common.css
@@ -8,6 +8,7 @@
     width: 100%;
     height: 100%!important;
     text-align: center;
+   
 }
 :global(.App){
     width: 100%;
@@ -24,4 +25,24 @@
 /*列表样式*/
 :global(.all){
     padding: 5rem 0 3.8rem 0;
+}
+
+/*loading动画样式*/
+
+.state-loading .pull-load-footer-default i {
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 1.5rem;
+    width: 1em;
+    height: 1em;
+    border: 2px solid #9494b6;
+    border-top-color: #fff;
+    border-radius: 100%;
+    animation: circle .8s infinite linear;
+  }
+  @keyframes circle {
+    100% {
+    transform: rotate(360deg);
+    }
 }
